--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
         go-version: 1.16
 
     - name: UDP Receive Buffer Size
-      run: sysctl -w net.core.rmem_max=2500000
+      run: sudo sysctl -w net.core.rmem_max=2500000
 
     - name: Static Checking
       run: go vet -v ./...
